added unit test for dependency graph, debounced search with request cancellation, refactor debouncer and autocomplete to reusable hooks

--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
       "json"
     ],
     "roots": ["<rootDir>/src"],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
     "transform": {
       "^.+\\.(ts|tsx)$": "ts-jest"
     }
